--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <a href="index3.html"><img src="/icons/icon-3.png" alt=""> Мероприятия</a>
                 
                 </li>
+                <li>
+                    <a href="shop.html"><img src="/icons/icon-5.png" alt="">Техническая Поддерка</a>
+                    
+                </li>
             </ul>
         </nav>
         </div>
