--- a/shop.html
+++ b/shop.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="shortcut icon" href="/icons/icon.png" type="image/png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BigCity</title>
 </head>
 <body>
     <header id="header">
@@ -26,6 +26,10 @@
                 </li>
                 <li>
                     <a href="index2.html"><img src="/icons/icon-2.png" alt="">Техническая Поддерка</a>
+                </li>
+                <li>
+                    <a href="index3.html">  <img src="/icons/icon-3.png" alt="">Мероприятия</a>
+                
                 </li>
             </ul>
         </nav>
