--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 
                 </li>
                 <li>
-                    <a href="shop.html"><img src="/icons/icon-5.png" alt="">Техническая Поддерка</a>
+                    <a href="shop.html"><img src="/icons/icon-5.png" alt="">Shop</a>
                     
                 </li>
             </ul>
