--- a/index2.html
+++ b/index2.html
@@ -28,8 +28,8 @@
                     <a href="index3.html">  <img src="/icons/icon-3.png" alt="">Мероприятия</a>
                 
                 </li>
-                <li>
-                    <a href="shop.html"><img src="/icons/icon-5.png" alt="">Техническая Поддерка</a>
+                 <li>
+                    <a href="shop.html"><img src="/icons/icon-5.png" alt="">Shop</a>
                     
                 </li>
             </ul>
