--- a/index3.html
+++ b/index3.html
@@ -26,6 +26,10 @@
                 <li>
                     <a href="index2.html"><img src="/icons/icon-2.png" alt="">Техническая Поддерка</a>
                 </li>
+                <li>
+                    <a href="shop.html"><img src="/icons/icon-5.png" alt="">Shop</a>
+                    
+                </li>
             </ul>
         </nav>
         </div>
