--- a/shop.html
+++ b/shop.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="shortcut icon" href="/icons/icon.png" type="image/png">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>BigCity</title>
 </head>
 <body>
@@ -39,13 +39,18 @@
       <div class = "carousel-inner">
          <img src="/portfolio/img04.jpg" alt="..." class = 'd-block w-100'> 
     </div>
-    <div class = "carousel-inner">
+    <div class = "carousel-item">
         <img src="/portfolio/img03.jpg" alt="..." class = 'd-block w-100'> 
    </div>
-   <div class = "carousel-inner">
+   <div class = "carousel-item">
     <img src="/portfolio/img02.jpg" alt="..." class = 'd-block w-100'> 
 </div>
     </section>
+    <footer>
+        <div class="footer">
+          <p>BigCityLife 2020.</p>
+        </div>
+     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
 </body>
 </html>
